--- a/app/src/main/res/layout/layout_go_back_or_to_test.xml
+++ b/app/src/main/res/layout/layout_go_back_or_to_test.xml
@@ -4,45 +4,31 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:background="@color/colorAlmostWhite"
-    android:baselineAligned="false"
-    android:layout_marginTop="5sp"
-    android:layout_marginBottom="5sp">
+    android:background="@color/transparent">
 
     <TextView
         android:id="@+id/go_back"
         android:layout_width="0sp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:text="@string/go_back"
-        android:textColor="@color/red_shade_three"
-        android:background="@drawable/oval_button"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
+        android:textColor="@color/red_shade_four"
+        android:background="@color/white"
+        android:padding="10sp"
         android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_margin="10sp"
-        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/go_to_test"
         android:layout_width="0sp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:text="@string/go_to_test"
-        android:textColor="@color/red_shade_three"
-        android:background="@drawable/oval_button"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_margin="10sp"
-        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+        android:textColor="@color/white"
+        android:background="@color/red_shade_three"
+        android:padding="10sp"
+        android:gravity="center"/>
 
 </LinearLayout>
