--- a/app/src/main/res/layout/fragment_magnetic.xml
+++ b/app/src/main/res/layout/fragment_magnetic.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".view.detail_activity.sensors.mag_field_sensor.MagneticFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:descendantFocusability="blocksDescendants">
+        android:layout_height="0sp"
+        android:layout_weight="1">
 
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="3sp"
-            android:background="@color/colorMajorDark"
-            tools:ignore="ContentDescription,SmallSp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:descendantFocusability="blocksDescendants">
 
-        <include layout="@layout/layout_about_sensor" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="3sp"
+                android:background="@color/colorMajorDark"
+                tools:ignore="ContentDescription,SmallSp" />
 
-        <include layout="@layout/layout_basic_information" />
+            <include layout="@layout/layout_about_sensor" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1sp"
-            android:background="@color/colorTextFive"
-            tools:ignore="ContentDescription,SmallSp"/>
+            <include layout="@layout/layout_basic_information" />
 
-        <include layout="@layout/layout_go_back_or_to_test" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1sp"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription,SmallSp"/>
 
-    </LinearLayout>
+        </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
+
+    <include layout="@layout/layout_go_back_or_to_test"/>
+
+</LinearLayout>
