--- a/app/src/main/res/layout/fragment_directions.xml
+++ b/app/src/main/res/layout/fragment_directions.xml
@@ -81,21 +81,16 @@
         android:layout_weight="1"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:id="@+id/start_test"
         android:text="@string/start_test"
-        android:textColor="@color/red_shade_three"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="10sp"
+        android:padding="12sp"
         android:gravity="center_horizontal"
-        android:background="@drawable/oval_button"
-        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:background="@color/red_shade_three"
+        android:layout_gravity="center"
         tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
 </LinearLayout>
