--- a/app/src/main/res/layout/fragment_fingerprint_test.xml
+++ b/app/src/main/res/layout/fragment_fingerprint_test.xml
@@ -24,25 +24,6 @@
     </FrameLayout>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:id="@+id/reset_button"
-        android:text="@string/reset"
-        android:textColor="@color/red_shade_three"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:visibility="gone"
-        android:layout_marginTop="10sp"
-        android:layout_marginBottom="10sp"
-        android:gravity="center_horizontal"
-        android:background="@drawable/oval_button"
-        android:layout_gravity="center_horizontal"
-        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:textColor="@color/colorMajorDark"
@@ -50,5 +31,19 @@
         android:gravity="center"
         android:layout_gravity="bottom"
         android:id="@+id/fingerprint_text_status"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:id="@+id/reset_button"
+        android:text="@string/reset"
+        android:textColor="@color/white"
+        android:padding="12sp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:gravity="center"
+        android:background="@color/red_shade_three"
+        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
 
 </LinearLayout>
