--- a/app/src/main/res/layout/activity_learn_more.xml
+++ b/app/src/main/res/layout/activity_learn_more.xml
@@ -33,7 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="1"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:descendantFocusability="blocksDescendants"
+        android:id="@+id/scroll_view">
 
         <LinearLayout
             android:layout_width="match_parent"
