--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_margin="4sp"
     android:id="@+id/data_card"
     android:clickable="false"
-    tools:layout_width="100sp">
+    tools:layout_width="100sp"
+    android:layout_margin="4sp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,9 +18,9 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="120sp"
+            android:layout_height="100sp"
             android:id="@+id/data_drawable"
-            android:padding="20sp"
+            android:padding="25sp"
             tools:ignore="ContentDescription"
             android:tint="@color/colorMajorDark"
             tools:src="@drawable/baseline_bluetooth_black_48"/>
