--- a/app/src/main/res/layout/fragment_gravity_test.xml
+++ b/app/src/main/res/layout/fragment_gravity_test.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".view.test_activity.tests.gravity_fragment.GravityTestFragment">
+    tools:context=".view.test_activity.tests.gravity_test_fragment.GravityTestFragment">
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
